fix: footer center alignment when scaling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,7 +326,10 @@ k
 
 /* ------------------------------FOOTER */
 
-.footer-container {}
+.footer-container {
+    display: flex;
+    justify-content: center;
+}
 
 
 footer {
@@ -336,13 +339,13 @@ footer {
 }
 
 .list-group-item {
-    margin: 0 auto;
+    /* margin: 0 auto; */
     border: none;
 }
 
 .list-group {
-    margin: 0 auto;
-    width: 30%;
+    /* margin: 0 auto; */
+    /* width: 30%; */
 }
 
 .social-links li a i {
